[package]
name = "veth-util-rs"
version = "0.1.0"
authors = ["Collins Huff <collinsrhuffiii@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtnetlink = "0.14.1"
anyhow = "1.0.32"
futures = "0.3.5"
mac_address = "1.1.1"

[dependencies.tokio]
version = "1.4.0"
features =  ["full"]
